--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build APK (FIXED GRADLEW SCRIPT)
+name: Build APK (FINAL FIX - JVM 17)
 
 on:
   push:
@@ -12,30 +12,26 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 11
+    # --- PERUBAHAN DI SINI ---
+    # Java diubah dari 11 menjadi 17 agar cocok dengan Gradle
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
 
-    # LANGKAH PENYEMBUHAN: Setup Gradle untuk memperbaiki wrapper
+    # Langkah ini tetap diperlukan untuk memastikan gradlew tidak korup
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
 
-    # Pindah ke folder yang benar, lalu jalankan perintah perbaikan
-    - name: Regenerate Gradle Wrapper to fix corrupted file
-      run: |
-        cd content/FloatingKeyboard
-        gradle wrapper --gradle-version 7.2
-
-    # Sekarang kita build menggunakan gradlew yang BARU dan BERSIH
-    - name: Build APK with the new gradlew
+    # Tidak ada perubahan di sini
+    - name: Build APK with Gradle
       run: |
         cd content/FloatingKeyboard
         chmod +x ./gradlew
         bash ./gradlew assembleDebug
 
-    # Upload APK seperti biasa
+    # Tidak ada perubahan di sini
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4
       with:
